--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,3 +2,11 @@ body {
 	margin: 0;
 	font-family: sans-serif;
 }
+
+table {
+	border-collapse: collapse;
+}
+  
+table, td, th {
+	border: 1px solid black;
+}
