--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,12 +1,40 @@
-body {
-	margin: 0;
+body, html {
+    margin: 0;
 	font-family: sans-serif;
+	text-align: center;
+}
+
+.content {
+    margin: 0 auto;
+    width: 400px;
+}
+
+table, td, th {
+    border: 1px solid #aaa;
 }
 
 table {
-	border-collapse: collapse;
+    border-collapse: collapse;
+    width: 100%;
 }
-  
-table, td, th {
-	border: 1px solid black;
+
+th {
+    height: 30px;
+}
+
+td {
+    text-align: center;
+    padding: 5px;
+}
+
+.form {
+	margin: 20px;
+}
+
+input {
+	margin: 10px;
+}
+
+#content {
+    width: 70%;
 }
