--- a/templates/update.html
+++ b/templates/update.html
@@ -11,7 +11,13 @@
 
 	<div class="form">
 		<form action="/update/{{task.id}}" method="POST">
-			<input type="text" name="content" id="content" value="{{task.content}}">
+			<input 
+				required
+				type="text" 
+				name="content" 
+				id="content" 
+				value="{{task.content}}"
+			>
 			<input type="submit" value="Update Task">
 		</form>
 	</div>
